<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUserActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="353dp"
        android:layout_height="181dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951">

        <Button
            android:id="@+id/botonVehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarCoches"
            android:text="@string/buttonCoche" />

        <Button
            android:id="@+id/botonSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pulsarMasTarde"
            android:text="@string/buttonDespues"
            app:backgroundTint="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/textViewPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="371dp"
        android:layout_height="452dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDNI"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewDni" />

                <TextView
                    android:id="@+id/textViewNombre"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewNombre" />

                <TextView
                    android:id="@+id/textViewApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewApellido" />

                <TextView
                    android:id="@+id/textViewTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewTelefono" />

                <TextView
                    android:id="@+id/textViewCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewCorreo" />

                <TextView
                    android:id="@+id/textViewFecha"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewFecha" />

                <TextView
                    android:id="@+id/textViewCalle"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewCalle" />

                <TextView
                    android:id="@+id/textViewNumero"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewNumero" />

                <TextView
                    android:id="@+id/textViewPortal"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewPortal" />

                <TextView
                    android:id="@+id/textViewPiso"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewPiso" />

                <TextView
                    android:id="@+id/textViewCP"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewCP" />

                <TextView
                    android:id="@+id/textViewCiudad"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textViewCiudad" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/textDNI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/textNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/textApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name" />

                <EditText
                    android:id="@+id/textPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/textFechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/textCalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/textNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/textPortal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/textPiso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/textCodPostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/textCiudad"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>